<resources>
    <string name="app_name">Answer Sheet Scorer</string>

    <!-- Home menu item name -->

    <!-- Main menu item names -->
    <string name="mark_answer_title">Get Mark</string>
    <string name="view_marks_title">View Marks</string>
    <string name="answer_analysis_title">Analysis</string>

    <string name="mark_answer">Mark your answer sheet</string>
    <string name="view_marks">View Marks</string>
    <string name="answer_analysis">Answer Analysis</string>

    <!-- Support menu item names -->
    <string name="help">Help</string>
    <string name="about_us">About us</string>

    <string name="photo">Take photo</string>
    <string name="gallery">From gallery</string>
    <string name="download_answer_sheet">Download answer sheet</string>
    <string name="no_answer_sheet_que">Don\'t have answer sheet?</string>

    <!-- Process answer sheet -->
    <string name="answer_sheet">Answer Sheet</string>
    <string name="process_title">Mark Answer Sheet</string>
    <string name="process_button_start">Start Marking</string>
    <string name="answer_key_list_item_title">KEY</string>

    <!-- View marks -->
    <string name="mark_m_code_select">Select available MCode:</string>
    <string name="none">None</string>

    <!-- Choices/Options -->
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="option_e">E</string>

    <string name="no_answer_sheet_error_message">Answer sheet can\'t be found.\nPlease retry again.</string>
    <string name="no_answer_key_error_message">There is no answer key with MCode: %1$s.\nPlease add the respective answer key first (using ExCode: 000)</string>

    <string name="m_code">MCode: %1$s</string>
    <string name="ex_code">ExCode: %1$s</string>
    <string name="ok">Ok</string>

    <string name="answer_key_detail_activity_title">Answer Key</string>

    <string name="save_analysis_as_pdf">Save as PDF</string>
    <string name="save_analysis_as_csv">Save as CSV</string>
    <string name="save_success">Save succeed</string>
    <string name="save_failed">Save failed</string>
</resources>
