<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/number"
        style="@style/OptionItem"
        android:background="@color/colorPrimary"/>

    <TextView android:id="@+id/option_a"
        style="@style/OptionItem"
        android:text="@string/option_a"/>

    <TextView android:id="@+id/option_b"
        style="@style/OptionItem"
        android:text="@string/option_b"/>

    <TextView android:id="@+id/option_c"
        style="@style/OptionItem"
        android:text="@string/option_c"/>

    <TextView android:id="@+id/option_d"
        style="@style/OptionItem"
        android:text="@string/option_d"/>

    <TextView android:id="@+id/option_e"
        style="@style/OptionItem"
        android:text="@string/option_e"/>

</LinearLayout>