<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/home_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black" />
    </group>
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mark_answer"
            android:title="@string/mark_answer"
            android:icon="@drawable/ic_camera_black" />
        <item
            android:id="@+id/view_marks"
            android:title="@string/view_marks"
            android:icon="@drawable/ic_folder_black" />
        <item
            android:id="@+id/answer_analysis"
            android:title="@string/answer_analysis"
            android:icon="@drawable/ic_show_chart_black" />
    </group>
    <group
        android:id="@+id/support_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/help"
            android:title="@string/help" />
        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />
    </group>
</menu>