<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.GetMarkFragment">

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:text="@string/mark_answer"/>

    <LinearLayout android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/answer_sheet_que"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView android:id="@+id/answer_sheet_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_launcher_background" />

        <Button android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            style="@style/AppTheme.Button.MenuButton"
            android:drawableLeft="@drawable/ic_photo_camera_black"/>

        <Button android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            style="@style/AppTheme.Button.MenuButton"
            android:drawableLeft="@drawable/ic_image_black"/>

    </LinearLayout>

    <TextView android:id="@+id/answer_sheet_que"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/download_answer_sheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_answer_sheet_que" />

    <Button android:id="@+id/download_answer_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/download_answer_sheet"
        style="@style/AppTheme.Button.MenuButton"
        android:drawableLeft="@drawable/ic_file_download_black"/>

</android.support.constraint.ConstraintLayout>